# OpenGLCoursework

./: CMakeLists.txt  Camera.h  Cube.cpp  Cube.h  LoadTexture.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectInstance.cpp  ObjectInstance.h  OpenGLCoursework.cpp  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  ShaderLoader.h  Vertex.cpp  Vertex.h  fragment.glsl  objloader.hpp
